# voltacode

./: .gitignore  Cargo.toml  package.json  pyproject.toml
analyzer/: ast_chunker.py  scrubber.py
crates/voltacode-cli/: Cargo.toml
crates/voltacode-cli/src/: input.rs  main.rs  render.rs
crates/voltacode-core/: Cargo.toml
crates/voltacode-core/src/: bridge.rs  db.rs  lib.rs
crates/voltacode-core/src/llm/: anthropic.rs  mod.rs  ollama.rs  openai.rs
crates/voltacode-core/src/tools/: bash.rs  fs.rs  mod.rs
orchestrator/: Cargo.toml  config.json  extract.ts  inference_flight.py  init.py  network_lock.py  state.db  tui_monitor.rs
orchestrator/src/: container_bind.rs  lib.rs  signals.rs  telemetry.rs  tui_monitor.rs
