[workspace]
members = [
    "crates/voltacode-core",
    "crates/voltacode-cli"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ekjot Singh <ekjotmakhija@gmail.com>"]

[dependencies]
# Inject these into the crate housing the orchestrator
ratatui = "0.26.0"
crossterm = "0.27.0"
tokio = { version = "1.37", features = ["full"] }
