[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voltacode-bridge"
version = "0.1.0"
description = "Voltacode Python Execution Bridge and Analysis Engine"
requires-python = ">=3.10"
dependencies = [
    "tree-sitter==0.21.3",
    "tree-sitter-python==0.21.0",
    "tree-sitter-rust==0.21.2"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["analyzer*", "orchestrator*"]
