[package]
name = "voltacode-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
voltacode-core = { path = "../voltacode-core" }
crossterm = "0.27.0"
syntect = "5.2.0"
pulldown-cmark = "0.10"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
