[package]
name = "voltacode-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.36", features = ["full", "process"] }
async-trait = "0.1.77"
# Disable default-tls to bypass OpenSSL, use pure-Rust rustls instead
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
